unpackaged/main/default/objects/Consultation__c/Consultation__c.object-meta.xml
<CustomObject>
    <label>Consultation</label>
    <nameField>
        <displayFormat>CTN-{000000}</displayFormat>
        <label>Consultation Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>