unpackaged/main/default/objects/Consultation__c/fields/Consultant_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Facility Consultant is an Individual (Contact) who works at a Facility (Account); select when cost is payable to the Facility</description>
    <inlineHelpText>A Facility Consultant is an Individual (Contact) who works at a Facility (Account); select when cost is payable to the Facility</inlineHelpText>
    <label>Facility Consultant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Provider (Corporate)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consultations</relationshipLabel>
    <relationshipName>Consultations</relationshipName>
    <type>Lookup</type>
</CustomField>