unpackaged/main/default/objects/Consultation__c/fields/Consultation_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Start_Date_Time__c</fullName>
    <label>Consultation Start Date / Time</label>
    <type>DateTime</type>
</CustomField>