unpackaged/main/default/objects/Consultation__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consultations (Facility)</relationshipLabel>
    <relationshipName>Consultations2</relationshipName>
    <type>Lookup</type>
</CustomField>