unpackaged/main/default/objects/Consultation__c/fields/Internal_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An internal User who undertakes Consultation</description>
    <label>Internal Practitioner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consultations</relationshipName>
    <type>Lookup</type>
</CustomField>