unpackaged/main/default/objects/Consultation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial consultation</fullName>
            </value>
            <value>
                <fullName>Follow-up consultation</fullName>
            </value>
            <value>
                <fullName>Blood test</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>GP telephone consultation</fullName>
            </value>
            <value>
                <fullName>GP consultation at home</fullName>
            </value>
            <value>
                <fullName>Prescription</fullName>
            </value>
            <value>
                <fullName>Cast medical assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>